Added Pinia stores sys, refactor urls

--- a/aionapp/src/css/quasar.variables.scss
+++ b/aionapp/src/css/quasar.variables.scss
@@ -25,3 +25,10 @@ $negative  : #CA054D;
 $info      : #4E598C;
 $warning   : #F2769D;
 
+$low       : #add8e6;
+$medium    : #ffa500;
+$high      : #c62828;
+
+$todo      : #c8e6c9;
+$inprogress: #add8e6;
+$done      : #4caf50;
