project & main ui changes

--- a/aionapp/src/css/quasar.variables.scss
+++ b/aionapp/src/css/quasar.variables.scss
@@ -16,11 +16,12 @@ $primary   : #FAF0E6;
 $secondary : #A57F60;
 $third     : #e0d9d1;
 $accent    : #1A090D;
+$tertiary    : #c4a789;
 
 $dark      : #A57F60;
 $dark-page : #0C1618;
 
-$positive  : #339672;
+$positive  : #12aa72;
 $negative  : #CA054D;
 $info      : #4E598C;
 $warning   : #F2769D;
