--- a/aionapp/src/css/app.scss
+++ b/aionapp/src/css/app.scss
@@ -1,4 +1,6 @@
 // app global css in SCSS form
+
+
 @font-face {
     font-family: 'courier';
     src: url(./fonts/courier-new-webfont.woff);
@@ -6,4 +8,36 @@
 
 .courier-font {
     font-family: 'courier';
+}
+
+.sans-serif {
+    font-family: 'sans-serif';
+}
+
+.low-priority {
+    background-color: $low-priority !important;
+}
+
+.medium-priority {
+    background-color: $medium-priority !important;
+}
+
+.high-priority {
+    background-color: $high-priority !important;
+}
+
+.todo {
+    background-color: $todo !important;
+}
+
+.in-progress {
+    background-color: $inprogress !important;
+}
+
+.done {
+    background-color: $done !important;
+}
+
+.third {
+    background: $third !important;
 }
